# manpack

./: CMakeLists.txt
src/: CMakeLists.txt  Cargo.toml  test.cpp
src/codec/src/: lib.rs
src/manpack/: Cargo.toml
src/manpack-cpp-interface/: Cargo.toml
src/manpack-cpp-interface/src/: cpp_interface.rs  lib.rs
src/manpack/src/: c_interface.rs  codec.rs  common.rs  cpp_interface.rs  huffman.rs  lib.rs
